@@ -24,6 +24,7 @@ Changelog 0.7.1.1
 [SA-00449] SallyAPI: bring up the "is playing" only if it is not older than 10 min
 [SA-00000] SallyAPI: UI Controls
 + scroll able Form
+[SA-00437] config menu looks like a header
 
 
 Changelog 0.7.0.6
